Change endpoints URLs and throw exceptions in case of 404s
