# src/main/java/ca/bc/gov/backendstartapi/endpoint/VegetationCodeEndpoint.java
@@ -6,7 +6,7 @@ import ca.bc.gov.backendstartapi.repository.VegetationCodeRepository;
 import jakarta.validation.Valid;
 import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.HttpStatus;
 import org.springframework.util.MimeTypeUtils;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -14,13 +14,14 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.server.ResponseStatusException;
 
 /**
  * Used for providing information related to {@link VegetationCode vegetation codes} via HTTP
  * requests.
  */
 @RestController
-@RequestMapping(path = "/api/vegetationCode")
+@RequestMapping(path = "/api/vegetation-codes")
 @Validated
 public class VegetationCodeEndpoint {
 
@@ -30,12 +31,16 @@ public class VegetationCodeEndpoint {
    * Fetch information about a single vegetation code.
    *
    * @param code the vegetation code being sought after
-   * @return information about the vegetation code {@code code}, if it exists; nothing, otherwise
+   * @return information about the vegetation code {@code code}, if it exists
+   * @throws ResponseStatusException with status code 404 if such code doesn't exist
    */
   @GetMapping(path = "/{code}", produces = MimeTypeUtils.APPLICATION_JSON_VALUE)
-  public ResponseEntity<VegetationCode> findByCode(@PathVariable("code") String code) {
+  public VegetationCode findByCode(@PathVariable("code") String code) {
     var retrievalResult = vegetationCodeRepository.findByCode(code);
-    return ResponseEntity.of(retrievalResult);
+    return retrievalResult.orElseThrow(
+        () ->
+            new ResponseStatusException(
+                HttpStatus.NOT_FOUND, String.format("Vegetation code %s not found.", code)));
   }
 
   /**
@@ -48,12 +53,10 @@ public class VegetationCodeEndpoint {
    * @return a list of {@code size} or less vegetation codes, ordered by identifier
    */
   @GetMapping(produces = MimeTypeUtils.APPLICATION_JSON_VALUE)
-  public ResponseEntity<List<VegetationCode>> findEffectiveByCodeOrDescription(
+  public List<VegetationCode> findEffectiveByCodeOrDescription(
       @RequestParam(name = "search", defaultValue = "") String search,
       @Valid PaginationParameters paginationParameters) {
-    var searchResults =
-        vegetationCodeRepository.findValidByCodeOrDescription(
-            search, paginationParameters.skip(), paginationParameters.size());
-    return ResponseEntity.ok(searchResults);
+    return vegetationCodeRepository.findValidByCodeOrDescription(
+        search, paginationParameters.skip(), paginationParameters.size());
   }
 }
